@@ -1,3 +1,4 @@
+  * toggle panel command can be specified during panel creation
   * default values for properties added
   * double properties support added
   * commands API added
